# numbaclass

./: .gitignore  LICENSE  README.md  class_to_convert.py  makenumbaclass.py  numbaclass.py  pyproject.toml  test_class.py  test_examples.py
examples/: example_class.py  example_decorated.py  example_format.py  example_incr.py  example_incr_testfrmt.py  example_nest.py  example_parent.py  example_to_nest.py  exampleincr_converted.py  test_class.py
examples/__nbcache__/: exampleformat__nbc__.py  exampleincr__nbc__.py  exampleincrtestfrmt__nbc__.py  examplenest__nbc__.py
examples/__numbacls__/: exampleclass_nb.py
numbaclass/: makenumbaclass.py  numbaclass.py
src/numbaclass/: __init__.py  makenumbaclass.py  numbaclass.py
tests/: class_to_convert.py  test_class.py  testclass_nb.py
