[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numbaclass"
version = "0.1.0a"
description = 'Convert Python class to Numba aware class, using StructRef.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Anton Lobachev", email = "anvlobachev@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/numbaclass#readme"
Issues = "https://github.com/unknown/numbaclass/issues"
Source = "https://github.com/unknown/numbaclass"


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/numbaclass tests}"

[tool.coverage.run]
source_pkgs = ["numbaclass", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
numbaclass = ["src/numbaclass", "*/numbaclass/src/numbaclass"]
tests = ["tests", "*/numbaclass/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
