[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numbaclass"
version = "0.1.0a"
description = 'Convert Python class to Numba aware class, using StructRef.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Anton Lobachev", email = "anvlobachev@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  # "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",

]
dependencies = ["numba"]

[project.urls]
Documentation = "https://github.com/anvlobachev/numbaclass#readme"
Issues = "https://github.com/anvlobachev/numbaclass/issues"
Source = "https://github.com/anvlobachev/numbaclass"


[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"


[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/numbaclass tests}"


[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/examples", ""]

[tool.hatch.build.targets.wheel]
packages = ["src/numbaclass"]
