[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "numbaclass"
version = "0.1.2a"
description = 'Convert Python class to Numba aware class, using StructRef.'
authors = [{ name = "Anton Lobachev", email = "anvlobachev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  # "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

]

dependencies = ["numba"]

[project.urls]
Documentation = "https://github.com/anvlobachev/numbaclass#readme"
Issues = "https://github.com/anvlobachev/numbaclass/issues"
Source = "https://github.com/anvlobachev/numbaclass"
